swen430as2/test_files/valid/unions/UnionType_Valid_05.while
int|int f(int x) {
    return x;
}

void main() {
    assert f(1) == 1;
}

