swen430as2/test_files/invalid/casts/Cast_Invalid_5-TC01.while
int|null f(int|bool x) {
    return (int|null) x;
}
